force-app/main/default/objects/Workshops__c/Workshops__c.object-meta.xml
<CustomObject>
    <label>Workshops</label>
    <nameField>
        <displayFormat>BZ {0000}</displayFormat>
        <label>Workshops Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workshops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>