force-app/main/default/objects/Workshops__c/fields/Audio_Visual_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Audio_Visual_Equipment__c</fullName>
    <label>Audio Visual Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Venue to provide Audio Visual equipment</fullName>
            </value>
            <value>
                <fullName>Bully Zero to provide Audio Visual equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>