force-app/main/default/objects/Workshops__c/fields/Audio_Visual_notes__c.field-meta.xml
<CustomField>
    <fullName>Audio_Visual_notes__c</fullName>
    <description>Record here what AV equipment needed to be provided and any related notes</description>
    <label>Audio Visual Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>