force-app/main/default/objects/Workshops__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <inlineHelpText>Why was the workshop cancelled?</inlineHelpText>
    <label>Cancellation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>