force-app/main/default/objects/Workshops__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>The time the workshop finishes</description>
    <label>End Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>