force-app/main/default/objects/Workshops__c/fields/Funded_by_3rd_Party__c.field-meta.xml
<CustomField>
    <fullName>Funded_by_3rd_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funded by 3rd Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Workshops (Funded by 3rd Party)</relationshipLabel>
    <relationshipName>Workshops1</relationshipName>
    <type>Lookup</type>
</CustomField>