force-app/main/default/objects/Workshops__c/fields/Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attendees__c</fullName>
    <inlineHelpText>How many people attended the workshop?</inlineHelpText>
    <label>Number of Attendees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>