force-app/main/default/objects/Workshops__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Workshops</relationshipLabel>
    <relationshipName>Workshops</relationshipName>
    <type>Lookup</type>
</CustomField>