force-app/main/default/objects/Workshops__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Workshops</relationshipLabel>
    <relationshipName>Workshops</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>