force-app/main/default/objects/Workshops__c/fields/Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Name__c</fullName>
    <formula>Organisation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organisation Name</label>
    <type>Text</type>
</CustomField>