force-app/main/default/objects/Workshops__c/fields/Parking_Facilities_Notes__c.field-meta.xml
<CustomField>
    <fullName>Parking_Facilities_Notes__c</fullName>
    <description>Describe the parking facilities of the venue here</description>
    <label>Parking Facilities Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>