force-app/main/default/objects/Workshops__c/fields/Presentation_Duration_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Duration_In_Minutes__c</fullName>
    <label>Presentation Duration (In Minutes)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>40</fullName>
                <isActive>false</isActive>
                <label>40</label>
            </value>
            <value>
                <fullName>50</fullName>
                <isActive>false</isActive>
                <label>50</label>
            </value>
            <value>
                <fullName>55</fullName>
                <isActive>false</isActive>
                <label>55</label>
            </value>
            <value>
                <fullName>65</fullName>
                <isActive>false</isActive>
                <label>65</label>
            </value>
            <value>
                <fullName>70</fullName>
                <isActive>false</isActive>
                <label>70</label>
            </value>
            <value>
                <fullName>75</fullName>
                <isActive>false</isActive>
                <label>75</label>
            </value>
            <value>
                <fullName>80</fullName>
                <isActive>false</isActive>
                <label>80</label>
            </value>
            <value>
                <fullName>85</fullName>
                <isActive>false</isActive>
                <label>85</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>