force-app/main/default/objects/Workshops__c/fields/Presentation_Type__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Type__c</fullName>
    <label>Presentation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Presentation_Type</valueSetName>
    </valueSet>
</CustomField>