force-app/main/default/objects/Workshops__c/fields/Presenter__c.field-meta.xml
<CustomField>
    <fullName>Presenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Presenter</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Presenter__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Workshops (Presenter)</relationshipLabel>
    <relationshipName>Workshops1</relationshipName>
    <type>Lookup</type>
</CustomField>