force-app/main/default/objects/Workshops__c/fields/Presenter_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Presenter_Full_Name__c</fullName>
    <formula>Presenter__r.FirstName +&quot; &quot;+ Presenter__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presenter Full Name</label>
    <type>Text</type>
</CustomField>