force-app/main/default/objects/Workshops__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Workshops</relationshipLabel>
    <relationshipName>Workshops</relationshipName>
    <type>Lookup</type>
</CustomField>