force-app/main/default/objects/Workshops__c/fields/Type_of_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Workshop__c</fullName>
    <label>Type of Workshop</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Workplace</fullName>
            </value>
            <value>
                <fullName>Community Group</fullName>
            </value>
            <value>
                <fullName>WorkSafe</fullName>
            </value>
            <value>
                <fullName>Sports Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>