force-app/main/default/objects/Workshops__c/fields/Venue_for_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Venue_for_Workshop__c</fullName>
    <description>Enter here and specific information you have about the workshop venue</description>
    <label>Venue for Workshop</label>
    <type>TextArea</type>
</CustomField>