force-app/main/default/objects/Workshops__c/fields/Workshop_Date__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Date__c</fullName>
    <label>Workshop Date</label>
    <type>Date</type>
</CustomField>