force-app/main/default/objects/Workshops__c/fields/Workshop_Status__c.field-meta.xml
<CustomField>
    <fullName>Workshop_Status__c</fullName>
    <label>Workshop Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>