force-app/main/default/objects/Workshops__c/fields/Year_Level__c.field-meta.xml
<CustomField>
    <fullName>Year_Level__c</fullName>
    <label>Year Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year_Level</valueSetName>
    </valueSet>
</CustomField>