force-app/main/default/objects/Workshops__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>Workshop_Status__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>NAME</columns>
    <columns>Main_Contact__c</columns>
    <columns>Organisation__c</columns>
    <columns>Number_of_Attendees__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>