force-app/main/default/objects/Workshops__c/listViews/Completed_Workshops.listView-meta.xml
<ListView>
    <fullName>Completed_Workshops</fullName>
    <columns>NAME</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>Organisation__c</columns>
    <columns>Main_Contact__c</columns>
    <columns>Number_of_Attendees__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>Presenter__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Workshop_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Workshop_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Workshops</label>
</ListView>