force-app/main/default/objects/Workshops__c/listViews/Confirmed_Workshops_This_Month.listView-meta.xml
<ListView>
    <fullName>Confirmed_Workshops_This_Month</fullName>
    <columns>NAME</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>Organisation__c</columns>
    <columns>Main_Contact__c</columns>
    <columns>Number_of_Attendees__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>Presenter__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Workshop_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Workshop_Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </filters>
    <filters>
        <field>Start_Date_Time__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Confirmed Workshops - This Month</label>
</ListView>